# usbpico

./: .gitignore  CMakeLists.txt  PINOUT.md  README.md  SPRITES.md  blink.c  build.sh  main.c  msc_disk.c  sd_card.c  sd_card.h  sprite.h  tusb_config.h  usb_descriptors.c
sprites/: convert.py
sprites/djungelskog/: djungelskog.h
sprites/hangyodon/: hangyodon.h
sprites/sayuri/: sayuri.h
src/: main.c  st7735.c
